# IOT

./: CMakeLists.txt  IOT.py  README.md  executable.hpp  function.cpp  function.hpp  instruction.hpp  operand.cpp  setup.py
IOT/core/: __init__.py  executable.py  function.py  instruction.py  operand.py
core/: IOT.h  executable.c  executable.h  function.c  function.h  instruction.c  instruction.h  operand.c  operand.h
java/: Executable.java  Function.java  IOT.java  Instruction.java  Operand.java  Section.java
sample/: main.go  manage.sh  sample.py
sample/IOT/: IOT.go
src/: Executable.c  Executable.h  Function.h  IOT.h  executable.c  executable.cpp  executable.h  executable.hpp  function.c  function.cpp  function.h  instruction.c  instruction.cpp  instruction.h  main.c  main.go  operand.c  operand.h  operand.hpp
test/: main.go
